<resources>
    <string name="app_name">THR Calculator</string>
    <string name="thr_intro">Ini adalah THR Calculator</string>
    <string name="senior">Senior</string>
    <string name="junior">Junior</string>
    <string name="nama">Nama</string>
    <string name="gaji">Gaji</string>
    <string name="tunjangan">Tunjangan</string>
    <string name="gaji_invalid">Gaji tidak boleh kosong</string>
    <string name="tunjangan_invalid">Tunjangan tidak boleh kosong</string>
    <string name="status_invalid">Status tidak boleh kosong</string>
    <string name="lamakerja_invalid">Lama kerja tidak boleh kosong</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="thr_x">THR: %1$.2f</string>
    <string name="status">Status</string>
    <string name="hitung">Hitung</string>
    <string name="lamakerja">Lama Kerja</string>
    <string name="status_x">Status : Senior</string>
    <string name="copyright">THR Calculator merupakan sebuah aplikasi Android untuk
menghitung THR (Tunjangan Hari Raya) sehingga seseorang dapat mengetahui THR mereka.\n\nAplikasi ini dibuat untuk Assesment Mobpro 2. Temukan kodenya di https://github.com/raihannaulia/THR-Calculator.git\n\nCopyright © 2023 Raihan Aulia Rahman.\nAll rights reserved.</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">THR: %1$s%2$s%3$s\n\n%4$s\n%5$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">THR: %1$.2f - %2$s</string>
    <string name="data_x">Gaji: %1$.1f - Tunjangan: %2$.1f - %3$s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="notif_title">Udah mau lebaran, jangan lupa THR untuk karyawan</string>
    <string name="notif_text">Mari hitung THR untuk karyawan</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data uang otomatis</string>
    <string name="switch_layout">Ubah tampilan</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="daftar_uang">Daftar Uang</string>
    <string name="message">%1$s diklik!</string>

</resources>